--- a/style.css
+++ b/style.css
@@ -105,7 +105,11 @@ font-size:10px;
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding: 40px;
+  padding: 20px;
+  margin:20px;
+  max-height: 400px;
+  margin-top:20px;
+  margin-bottom:20px;
 }
 
 .row__poster:hover {
