--- a/style.css
+++ b/style.css
@@ -102,15 +102,18 @@ font-size:10px;
 }
 
 .row__posters {
+  width:60%;
+  height:300px;
   display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
-  padding: 20px;
-  margin:20px;
-  max-height: 50px;
-  margin-top:20px;
-  margin-bottom:20px;
 }
+
+.img {
+	width:100%;
+	height:100%;
+    }
+
 
 .row__poster:hover {
   transform: scale(1.08);
